--- a/packages/excalidraw/components/Stats/Stats.scss
+++ b/packages/excalidraw/components/Stats/Stats.scss
@@ -2,6 +2,7 @@
   width: 204px;
   position: absolute;
   top: 60px;
+  right: 60px; // Leave space for pen toolbar on the right
   font-size: 12px;
   z-index: var(--zIndex-layerUI);
   pointer-events: var(--ui-pointerEvents);
